--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -43,9 +43,13 @@
 			<type>test-jar</type>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.openmrs.module</groupId>-->
+<!--			<artifactId>openhmis.inventory-omod</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
-			<artifactId>openhmis.inventory-omod</artifactId>
+			<artifactId>stockmanagement-api</artifactId>
 		</dependency>
 
 		<dependency>
@@ -247,13 +251,13 @@
 							<outputDirectory>${project.build.directory}/jasmine/backboneforms/test</outputDirectory>
 							<includes>js/**</includes>
 						</artifactItem>
-						<artifactItem>
-							<groupId>${project.parent.groupId}</groupId>
-							<artifactId>openhmis.inventory-omod</artifactId>
-							<overWrite>true</overWrite>
-							<outputDirectory>${project.build.directory}/jasmine/inventory</outputDirectory>
-							<includes>web/module/resources/**</includes>
-						</artifactItem>
+<!--						<artifactItem>-->
+<!--							<groupId>${project.parent.groupId}</groupId>-->
+<!--							<artifactId>openhmis.inventory-omod</artifactId>-->
+<!--							<overWrite>true</overWrite>-->
+<!--							<outputDirectory>${project.build.directory}/jasmine/inventory</outputDirectory>-->
+<!--							<includes>web/module/resources/**</includes>-->
+<!--						</artifactItem>-->
 					</artifactItems>
 				</configuration>
 				<executions>
