--- a/pom.xml
+++ b/pom.xml
@@ -117,28 +117,6 @@
 
 			<!-- https://mvnrepository.com/artifact/com.google.common/google-collect -->
 
-			<!--			<dependency>-->
-<!--				<groupId>org.openmrs.module</groupId>-->
-<!--				<artifactId>openhmis.commons-api</artifactId>-->
-<!--				<version>4.1.0-SNAPSHOT</version>-->
-<!--				<type>jar</type>-->
-<!--				<scope>provided</scope>-->
-<!--			</dependency>-->
-
-<!--			<dependency>-->
-<!--				<groupId>org.openmrs.module</groupId>-->
-<!--				<artifactId>openhmis.commons-tests</artifactId>-->
-<!--				<version>4.1.0-SNAPSHOT</version>-->
-<!--				<scope>test</scope>-->
-<!--			</dependency>-->
-
-<!--			<dependency>-->
-<!--				<groupId>org.openmrs.module</groupId>-->
-<!--				<artifactId>openhmis.commons-omod</artifactId>-->
-<!--				<version>4.1.0-SNAPSHOT</version>-->
-<!--				<type>jar</type>-->
-<!--				<scope>provided</scope>-->
-<!--			</dependency>-->
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
@@ -158,43 +136,19 @@
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
-				<artifactId>openhmis.inventory-api</artifactId>
-				<version>3.1.0-SNAPSHOT</version>
+				<artifactId>stockmanagement-api</artifactId>
+				<version>1.0.2-SNAPSHOT</version>
+				<type>jar</type>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>stockmanagement-omod</artifactId>
+				<version>1.0.2-SNAPSHOT</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
 
-			<dependency>
-				<groupId>org.openmrs.module</groupId>
-				<artifactId>openhmis.inventory-api</artifactId>
-				<version>3.1.0-SNAPSHOT</version>
-				<type>test-jar</type>
-				<scope>provided</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.openmrs.module</groupId>
-				<artifactId>openhmis.inventory-omod_1.x</artifactId>
-				<version>3.1.0-SNAPSHOT</version>
-				<type>jar</type>
-				<scope>provided</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.openmrs.module</groupId>
-				<artifactId>openhmis.inventory-omod_2.x</artifactId>
-				<version>3.1.0-SNAPSHOT</version>
-				<type>jar</type>
-				<scope>provided</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.openmrs.module</groupId>
-				<artifactId>openhmis.inventory-omod</artifactId>
-				<version>3.1.0-SNAPSHOT</version>
-				<type>jar</type>
-				<scope>provided</scope>
-			</dependency>
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
@@ -308,27 +262,27 @@
 						</dependency>
 					</dependencies>
 				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>2.9.1</version>
-					<configuration>
-						<configLocation>checkstyle/openhmis-checkstyle.xml</configLocation>
-						<propertiesLocation>checkstyle/openhmis-checkstyle.properties</propertiesLocation>
-						<!--<headerLocation>checkstyle/license-header.txt</headerLocation>-->
-						<suppressionsLocation>checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
-						<encoding>UTF-8</encoding>
-						<consoleOutput>true</consoleOutput>
-						<failsOnError>true</failsOnError>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>org.openmrs.module</groupId>
-							<artifactId>openhmis.commons-tools</artifactId>
-							<version>4.1.0-SNAPSHOT</version>
-						</dependency>
-					</dependencies>
-				</plugin>
+<!--				<plugin>-->
+<!--					<groupId>org.apache.maven.plugins</groupId>-->
+<!--					<artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--					<version>2.9.1</version>-->
+<!--					<configuration>-->
+<!--						<configLocation>checkstyle/openhmis-checkstyle.xml</configLocation>-->
+<!--						<propertiesLocation>checkstyle/openhmis-checkstyle.properties</propertiesLocation>-->
+<!--						&lt;!&ndash;<headerLocation>checkstyle/license-header.txt</headerLocation>&ndash;&gt;-->
+<!--						<suppressionsLocation>checkstyle/checkstyle-suppressions.xml</suppressionsLocation>-->
+<!--						<encoding>UTF-8</encoding>-->
+<!--						<consoleOutput>true</consoleOutput>-->
+<!--						<failsOnError>true</failsOnError>-->
+<!--					</configuration>-->
+<!--					<dependencies>-->
+<!--						<dependency>-->
+<!--							<groupId>org.openmrs.module</groupId>-->
+<!--							<artifactId>openhmis.commons-tools</artifactId>-->
+<!--							<version>4.1.0-SNAPSHOT</version>-->
+<!--						</dependency>-->
+<!--					</dependencies>-->
+<!--				</plugin>-->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
