--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,18 @@
 				<artifactId>dwr</artifactId>
 				<version>3.0.M1</version>
 			</dependency>
+
+			<dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.10</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
