--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -96,6 +96,10 @@
 			  <groupId>org.openmrs.module</groupId>
 			  <artifactId>webservices.rest-omod</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod-common</artifactId>
+		</dependency>
 
 		<!-- End webservices.rest -->
 
