--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,12 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
+			<dependency>
+				<groupId>joda-time</groupId>
+				<artifactId>joda-time</artifactId>
+				<version>2.10.14</version> <!-- Replace with the latest version available -->
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
