--- a/api/pom.xml
+++ b/api/pom.xml
@@ -117,6 +117,11 @@
 			<groupId>com.itextpdf</groupId>
 			<artifactId>font-asian</artifactId>
 		</dependency>
+<!--		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext-core</artifactId>
+			<type>pom</type>
+		</dependency>-->
 	</dependencies>
 	
 	<build>
