--- a/api/pom.xml
+++ b/api/pom.xml
@@ -78,7 +78,10 @@
 			<artifactId>idgen-api</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>orderexpansion-api</artifactId>
+		</dependency>
 
 		<!-- End OpenMRS core -->
 
