--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>orderexpansion-api</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>1.0.0</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
