--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -38,6 +38,9 @@ jobs:
           distribution: "temurin"
           java-version: "8"
 
+      - name: Build with Maven
+        run: mvn -B package -DskipTests
+
       - name: Set settings.xml
         uses: s4u/maven-settings-action@v3.0.0
         with:
