--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr.cashier</artifactId>
-		<version>4.2.2-SNAPSHOT</version>
+		<version>4.2.2</version>
 	</parent>
 
 	<artifactId>kenyaemr.cashier-omod</artifactId>
