--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,12 +1,11 @@
-name: Build and Publish to Nexus
-
+name: KenyaEMR Cashier CI/CD
 on:
   # Manually triggered workflow using the "Run workflow" button
   workflow_dispatch:
   push:
     branches: [master]
     tags:
-      - 'v*'
+      - "v*"
   pull_request:
     branches: [master]
 
@@ -19,30 +18,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
+
       - name: Set up JDK 8
         uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "8"
 
-      - name: Configure Git
-        run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-
       - name: Build with Maven
         run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            # Release build
-            VERSION=${GITHUB_REF#refs/tags/v}
-            echo "Building release version: $VERSION"
-            mvn versions:set -DnewVersion=$VERSION
-            mvn -B clean install -DskipTests
-          else
-            # Snapshot build
-            echo "Building snapshot version"
-            mvn -B clean install -DskipTests
-          fi
+          echo "Building project with current version"
+          mvn -B clean install -DskipTests
 
   publish:
     if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')) }}
@@ -53,6 +43,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
 
       - name: Set up JDK 8
         uses: actions/setup-java@v4
@@ -86,23 +82,36 @@ jobs:
           else
             # Snapshot publish
             echo "Publishing snapshot version"
+            # Ensure we have a SNAPSHOT version
+            CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+            if [[ ! "$CURRENT_VERSION" =~ -SNAPSHOT$ ]]; then
+              echo "Converting to SNAPSHOT version for deployment"
+              mvn versions:set -DnewVersion="${CURRENT_VERSION}-SNAPSHOT"
+            fi
             mvn --batch-mode deploy -DskipTests
           fi
 
       - name: Increment Version After Release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
+          git config user.email "github-actions@github.com"
+          git config user.name "GitHub Actions"
           VERSION=${GITHUB_REF#refs/tags/v}
           # Split version into components
           IFS='.' read -r major minor patch <<< "$VERSION"
           # Increment patch version
           new_patch=$((patch + 1))
           NEW_VERSION="$major.$minor.$new_patch-SNAPSHOT"
-          
+          echo "Current version: $VERSION"
+          echo "New version: $NEW_VERSION"
           # Update version in pom.xml
           mvn versions:set -DnewVersion=$NEW_VERSION
-          
+          # Check if there are changes to commit
+          if git diff --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
           # Commit and push changes
-          git add pom.xml
-          git commit -m "Increment version to $NEW_VERSION"
+          git add pom.xml */pom.xml
+          git commit -m "Increment version to $NEW_VERSION [skip ci]"
           git push origin master
