--- a/pom.xml
+++ b/pom.xml
@@ -323,6 +323,11 @@
 				<artifactId>joda-time</artifactId>
 				<version>2.10.14</version> <!-- Replace with the latest version available -->
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.13.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
