--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build with Maven
         run: |
           echo "Building project with current version"
-          mvn -B clean install -DskipTests
+          mvn -B clean install 
 
   publish:
     if: ${{ github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')) }}
