--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -83,6 +83,20 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.powermock</groupId>
+					<artifactId>powermock-module-junit4-rule-agent</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.powermock</groupId>
+					<artifactId>powermock-module-junit4</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.powermock</groupId>
+					<artifactId>powermock-api-mockito2</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- End OpenMRS core -->
@@ -99,6 +113,19 @@
 		</dependency>
 
 		<!-- End webservices.rest -->
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
@@ -257,6 +284,19 @@
 					<target>8</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version> <!-- Use a recent version, 2.14 is very old -->
+				<configuration>
+					<argLine>-Dmockito.core.loaded=true -Dmockito.ext.loaded=true
+						-Dmockito.mockmaker.inline.enabled=true</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
+
+
 	</build>
 </project>
