--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>kenyaemr.cashier</artifactId>
-	<version>4.2.3-SNAPSHOT</version>
+	<version>4.2.3</version>
 	<packaging>pom</packaging>
 	<name>OpenHMIS Cashier Module</name>
 	<description>Module to provide basic cashier functionality</description>
@@ -132,14 +132,14 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>stockmanagement-api</artifactId>
-				<version>1.0.2-SNAPSHOT</version>
+				<version>2.0.3</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>stockmanagement-omod</artifactId>
-				<version>1.0.2-SNAPSHOT</version>
+				<version>2.0.3</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
